@@ -2,10 +2,10 @@
  * ST32F103 memory setup.
  */
 __main_stack_size__     = 0x0100;  /* Exception handlers     */
-__process0_stack_size__  = 0x0200;  /* Main program           */
-__process1_stack_size__  = 0x0200; /* first thread program */
-__process2_stack_size__  = 0x0200; /* second thread program */
-__process3_stack_size__  = 0x0200; /* third thread program */
+__process0_stack_size__  = 0x0400; /* Main program           */
+__process1_stack_size__  = 0x0200; /* first thread program   */
+__process2_stack_size__  = 0x0200; /* second thread program  */
+__process3_stack_size__  = 0x0200; /* third thread program   */
 
 MEMORY
 {
